--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" data-theme = "light">
   <head>
     <meta charset="UTF-8" />
+    <!-- <link rel="icon" href="<link rel="icon" type="image/svg+xml" href="/vite.svg" />" type="image/x-icon"> -->
+    <link rel="icon" type="image/svg+xml" href="https://www.pngitem.com/pimgs/m/483-4834314_donation-icon-circle-emblem-hd-png-download.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donation Campaign</title>
   </head>
